Landing page de proba

--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>A Revolteira</title>
   </head>
-  <body>
-    <p>Web en construcción</p>
+  <body style="background-color: #3f4447">
+    <div class="h-screen flex items-center justify-center text-center">
+      <img class="w-1/2 lg:w-1/4" src="logo.png" alt="A Revolteira" />
+    </div>
   </body>
 </html>
