Patrocinio de Dinahosting

--- a/index.html
+++ b/index.html
@@ -13,5 +13,15 @@
         frameborder="0"
       ></iframe>
     </div>
+    <p
+      class="block absolute bottom-0 right-0 mr-10 mb-10 p-3 bg-white drop-shadow-lg text-sm"
+    >
+      <a
+        href="https://dinahosting.com"
+        title="Hosting e aloxamento web en dinahosting"
+        target="_blank"
+        >Hosting por <img src="dinahosting_red.png" alt="" class="mt-2 w-32" />
+      </a>
+    </p>
   </body>
 </html>
