Banner en la parte superior derecha

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       ></iframe>
     </div>
     <p
-      class="block absolute bottom-0 right-0 mr-10 mb-10 p-3 bg-white drop-shadow-lg text-sm"
+      class="block absolute top-0 right-0 mr-10 mt-10 p-3 bg-white drop-shadow-lg text-sm"
     >
       <a
         href="https://dinahosting.com"
